# CopernicusDataVisualizer

./: main.py  pyproject.toml  raw_data.nc  readme.md
